--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/vue": "^6.1.11",
+    "@mdi/font": "^7.4.47",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
